[package]
name = "rusttube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["blocking", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
futures = "0.3.30"
regex = "1.10.4"
url = "2.5.0"
taglib = "1.0.0"

[build-dependencies]
winres = "0.1.12"
